--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles.css" type="text/css" />
+		  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	</head>
 	<body>
 		<div class="page-container">
@@ -142,5 +143,7 @@
 				</div>
 			</div>
 		</div>
+	 <script src="trees.js"></script>
+
 	</body>
 </html>
